--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,9 @@
-set-option -g default-terminal "screen-256color"
+#set-option -g default-terminal "screen-256color"
+#set-option -g default-terminal "xterm"
+#set-option -g terminal-overrides ",xterm:Tc"
+set-option -g default-terminal "xterm-256color"
 set-option -g terminal-overrides ",xterm-256color:Tc"
+#set-option -g terminal-overrides ",xterm:Tc"
 #set-option -a terminal-features 'screen-256color:Tc'
 
 unbind r
@@ -17,10 +21,10 @@ set-option -g status-position top
 set -g @plugin 'tmux-plugins/tpm' # needed to fetch the plugin manually first - git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 set -g @plugin 'catppuccin/tmux#v2.1.1'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Options to make tmux more pleasant
 set -g mouse on
-#set -g default-terminal "tmux-256color"
 
 # Configure the catppuccin plugin
 set -g @catppuccin_flavor "frappe"
