--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ set-option -g default-terminal "xterm-256color"
 set-option -g terminal-overrides ",xterm-256color:Tc"
 #set-option -g terminal-overrides ",xterm:Tc"
 #set-option -a terminal-features 'screen-256color:Tc'
+set-window-option -g mode-keys vi
 
 unbind r
 bind r source-file ~/.tmux.conf
